--- a/JSON_Serializer.csproj
+++ b/JSON_Serializer.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+      <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+      <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+    </ItemGroup>
+
 </Project>
