--- a/JSON_Serializer.csproj
+++ b/JSON_Serializer.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+      <PackageReference Include="Microsoft.CodeCoverage" Version="17.3.0-preview-20220530-08" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0-preview-20220530-08" />
       <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
       <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
     </ItemGroup>
